--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,19 @@
                 android:layout_height="wrap_content"
                 android:background="#f5f5f5"
                 android:padding="12dp"
-                android:text="4、ViewFlipper实现滚动(PUSH_ON)" />
+                android:text="4，竖向自动滚动的View,类似中奖通知，缓慢滚动" />
+
+            <com.ly.autoscrolllayout.SmoothScrollLayout
+                android:id="@+id/smoothScrollLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f5f5f5"
+                android:padding="12dp"
+                android:text="5、ViewFlipper实现滚动(PUSH_ON)" />
 
             <ViewFlipper
                 android:id="@+id/push_up_flipper"
@@ -82,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:background="#f5f5f5"
                 android:padding="12dp"
-                android:text="5、ViewFlipper实现滚动(PUSH_LEFT)" />
+                android:text="6、ViewFlipper实现滚动(PUSH_LEFT)" />
 
             <ViewFlipper
                 android:id="@+id/push_left_flipper"
@@ -94,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:background="#f5f5f5"
                 android:padding="12dp"
-                android:text="6、ViewFlipper实现滚动(FADE_IN)" />
+                android:text="7、ViewFlipper实现滚动(FADE_IN)" />
 
             <ViewFlipper
                 android:id="@+id/fade_in_flipper"
@@ -106,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:background="#f5f5f5"
                 android:padding="12dp"
-                android:text="7、ViewFlipper实现滚动(HYPERSPACE)" />
+                android:text="8、ViewFlipper实现滚动(HYPERSPACE)" />
 
             <ViewFlipper
                 android:id="@+id/hyperspace_flipper"
